// Tests for editFile tool
// generated by polka.codes

import { describe, expect, it } from 'bun:test'
import { handler, isAvailable, toolInfo } from './editFile'
import type { FilesystemProvider } from './provider'

describe('editFile tool', () => {
  describe('toolInfo', () => {
    it('should have correct tool definition', () => {
      expect(toolInfo).toMatchSnapshot()
    })
  })

  describe('isAvailable', () => {
    it('should return true when provider has readFile and writeFile', () => {
      const provider: FilesystemProvider = {
        readFile: async () => 'content',
        writeFile: async () => {},
      }
      expect(isAvailable(provider)).toBe(true)
    })

    it('should return false when provider lacks readFile', () => {
      const provider: FilesystemProvider = {
        writeFile: async () => {},
      }
      expect(isAvailable(provider)).toBe(false)
    })

    it('should return false when provider lacks writeFile', () => {
      const provider: FilesystemProvider = {
        readFile: async () => 'content',
      }
      expect(isAvailable(provider)).toBe(false)
    })
  })

  describe('handler', () => {
    const createProvider = (fileContent: string | undefined = 'test content'): FilesystemProvider => ({
      readFile: async () => fileContent,
      writeFile: async () => {},
    })

    it('should return error when provider lacks capabilities', async () => {
      const provider: FilesystemProvider = {}
      const args = { path: 'test.txt', operations: [{ search: 'old', replace: 'new' }] }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should return error when file not found', async () => {
      const provider = createProvider(undefined)
      const args = { path: 'missing.txt', operations: [{ search: 'old', replace: 'new' }] }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should return error when no operations provided', async () => {
      const provider = createProvider('content')
      const args = { path: 'test.txt', operations: [] }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should handle single operation successfully', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'Hello world',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.txt',
        operations: {
          search: 'world',
          replace: 'beautiful world',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('Hello beautiful world')
    })

    it('should handle multiple operations successfully', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'function test() {\n  return 42;\n}',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.ts',
        operations: [
          {
            search: 'function test() {',
            replace: 'function test() {\n  console.log("debug");',
          },
          {
            search: 'return 42;',
            replace: 'return 42;\n  // Added comment',
          },
        ],
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('function test() {\n  console.log("debug");\n  return 42;\n  // Added comment\n}')
    })

    it('should handle start of file marker', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'export const value = 42;',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.ts',
        operations: {
          search: '<<<START_OF_FILE>>>',
          replace: '// Header comment\n',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('// Header comment\nexport const value = 42;')
    })

    it('should handle end of file marker', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'export const value = 42;',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.ts',
        operations: {
          search: '<<<END_OF_FILE>>>',
          replace: '\n// Footer comment',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('export const value = 42;\n// Footer comment')
    })

    it('should return error when text not found', async () => {
      const provider = createProvider('Hello world')
      const args = {
        path: 'test.txt',
        operations: {
          search: 'missing text',
          replace: 'replacement',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
    })

    it('should replace only first occurrence', async () => {
      let writtenContent = ''
      const provider: FilesystemProvider = {
        readFile: async () => 'test test test',
        writeFile: async (path, content) => {
          writtenContent = content
        },
      }
      const args = {
        path: 'test.txt',
        operations: {
          search: 'test',
          replace: 'replaced',
        },
      }

      const result = await handler(provider, args)

      expect(result).toMatchSnapshot()
      expect(writtenContent).toBe('replaced test test')
    })
  })
})
