// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`editFile tool toolInfo should have correct tool definition 1`] = `
{
  "description": "Request to edit file contents using search/replace operations. Supports multiple edit operations in a single call.",
  "examples": [
    {
      "description": "Replace specific text",
      "parameters": [
        {
          "name": "path",
          "value": "src/main.ts",
        },
        {
          "name": "operations",
          "value": {
            "replace": 
"function newFunction() {
  return "new implementation";
}"
,
            "search": 
"function oldFunction() {
  return 42;
}"
,
          },
        },
      ],
    },
    {
      "description": "Insert at start of file",
      "parameters": [
        {
          "name": "path",
          "value": "src/header.ts",
        },
        {
          "name": "operations",
          "value": {
            "replace": 
"// File header comment
"
,
            "search": "<<<START_OF_FILE>>>",
          },
        },
      ],
    },
    {
      "description": "Multiple operations in one call",
      "parameters": [
        {
          "name": "path",
          "value": "src/utils.ts",
        },
        {
          "name": "operations",
          "value": [
            {
              "replace": "import React, { useState } from "react"",
              "search": "import React from "react"",
            },
            {
              "replace": 
"function Component() {
  const [state, setState] = useState(false);
  return ("
,
              "search": 
"function Component() {
  return ("
,
            },
          ],
        },
      ],
    },
    {
      "description": "Append content at end of file",
      "parameters": [
        {
          "name": "path",
          "value": "src/footer.ts",
        },
        {
          "name": "operations",
          "value": {
            "replace": 
"
// End of file appended comment
"
,
            "search": "<<<END_OF_FILE>>>",
          },
        },
      ],
    },
  ],
  "name": "edit_file",
  "parameters": [
    {
      "description": "The path of the file to edit",
      "name": "path",
      "required": true,
      "usageValue": "File path here",
    },
    {
      "allowMultiple": true,
      "children": [
        {
          "description": "Text to search for and replace (use <<<START_OF_FILE>>> to insert at file start, <<<END_OF_FILE>>> to insert at file end)",
          "name": "search",
          "required": true,
          "usageValue": "Text to find and replace",
        },
        {
          "description": "Text to replace the search text with",
          "name": "replace",
          "required": true,
          "usageValue": "Replacement text",
        },
      ],
      "description": "Edit operation with search and replace parameters",
      "name": "operations",
      "required": true,
      "usageValue": "operations here",
    },
  ],
  "permissionLevel": 2,
}
`;

exports[`editFile tool handler should return error when provider lacks capabilities 1`] = `
{
  "message": "Not possible to edit file. Abort.",
  "type": "Error",
}
`;

exports[`editFile tool handler should return error when file not found 1`] = `
{
  "message": "<error><edit_file_path>missing.txt</edit_file_path><error_message>Could not find text: old</error_message></error>",
  "type": "Error",
}
`;

exports[`editFile tool handler should return error when no operations provided 1`] = `
{
  "message": "<error><edit_file_path>test.txt</edit_file_path><error_message>At least one edit operation is required</error_message></error>",
  "type": "Error",
}
`;

exports[`editFile tool handler should handle single operation successfully 1`] = `
{
  "message": "<edit_file_path>test.txt</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle multiple operations successfully 1`] = `
{
  "message": "<edit_file_path>test.ts</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle start of file marker 1`] = `
{
  "message": "<edit_file_path>test.ts</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle end of file marker 1`] = `
{
  "message": "<edit_file_path>test.ts</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should return error when text not found 1`] = `
{
  "message": "<error><edit_file_path>test.txt</edit_file_path><error_message>Could not find text: missing text</error_message></error>",
  "type": "Error",
}
`;

exports[`editFile tool handler should replace only first occurrence 1`] = `
{
  "message": "<edit_file_path>test.txt</edit_file_path>",
  "type": "Reply",
}
`;
